--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,8 @@
     ],
     "require": {
         "php": ">=5.4",
-        "fxmlrpc/fxmlrpc": "dev-removes_interface_suffix",
-        "fxmlrpc/serialization-implementation": "0.1",
-        "php-http/adapter": "0.1.*@dev",
-        "php-http/adapter-implementation": "0.1"
+        "fxmlrpc/fxmlrpc": "dev-initial_import",
+        "fxmlrpc/serialization-implementation": "0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
