--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require": {
         "php": ">=5.4",
         "fxmlrpc/fxmlrpc": "dev-initial_import",
-        "fxmlrpc/serialization-implementation": "0.1"
+        "fxmlrpc/transport": "dev-initial_import",
+        "fxmlrpc/serialization-implementation": "0.1",
+        "fxmlrpc/transport-implementation": "0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
